@@ -1,3 +1,8 @@
+2003-04-06  Bruno Haible  <bruno@clisp.org>
+
+	* relocatable.m4 (AC_RELOCATABLE_NOP): New macro.
+	(AC_RELOCATABLE_LIBRARY): Use it.
+
 2003-04-05  Bruno Haible  <bruno@clisp.org>
 
 	* canonicalize.m4 (gl_CANONICALIZE): Use AC_CHECK_FUNCS, so that
